Fix damage bug